--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "devDependencies": {},
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "sass": "sass --watch ./sass/main.scss:./public/style/style.css"
+        "sass": "sass --watch ./sass/main.scss:./public/style/style.css --style compressed"
     },
     "repository": {
         "type": "git",
